--- a/glade/fujicoin-ui.glade
+++ b/glade/fujicoin-ui.glade
@@ -566,8 +566,25 @@
                           <object class="GtkBox" id="vbox_cont_transaction">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="margin_right">5</property>
                             <property name="margin_bottom">3</property>
                             <property name="orientation">vertical</property>
+                            <child>
+                              <object class="GtkButton" id="button1">
+                                <property name="label" translatable="yes">Show More</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">True</property>
+                                <property name="halign">end</property>
+                                <property name="relief">half</property>
+                                <property name="xalign">1</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
                             <child>
                               <object class="GtkBox" id="hbox_header_transaction">
                                 <property name="visible">True</property>
@@ -629,7 +646,7 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">True</property>
-                                <property name="position">0</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                             <child>
@@ -672,7 +689,7 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">True</property>
-                                <property name="position">1</property>
+                                <property name="position">2</property>
                               </packing>
                             </child>
                             <child>
@@ -683,9 +700,9 @@
                                 <property name="activate_on_single_click">False</property>
                               </object>
                               <packing>
-                                <property name="expand">False</property>
+                                <property name="expand">True</property>
                                 <property name="fill">True</property>
-                                <property name="position">2</property>
+                                <property name="position">3</property>
                               </packing>
                             </child>
                           </object>
@@ -869,7 +886,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkComboBoxText" id="comboboxtext1">
+                                  <object class="GtkComboBoxText" id="drp_from_move">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                   </object>
@@ -893,7 +910,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkComboBoxText" id="comboboxtext2">
+                                  <object class="GtkComboBoxText" id="drp_to_move">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                   </object>
@@ -971,7 +988,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkEntry" id="entry1">
+                                  <object class="GtkEntry" id="entry_comment_move">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                   </object>
@@ -990,11 +1007,23 @@
                                     <property name="relief">half</property>
                                     <property name="use_stock">True</property>
                                     <property name="always_show_image">True</property>
+                                    <signal name="clicked" handler="on_btn_move_clicked" swapped="no"/>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
                                     <property name="fill">True</property>
                                     <property name="position">11</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="lbl_result_move">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">12</property>
                                   </packing>
                                 </child>
                               </object>
@@ -1012,7 +1041,7 @@
                                 <property name="orientation">vertical</property>
                                 <property name="spacing">20</property>
                                 <child>
-                                  <object class="GtkLabel" id="label13">
+                                  <object class="GtkLabel" id="lbl_title_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="label" translatable="yes">SEND</property>
@@ -1027,10 +1056,11 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="label14">
+                                  <object class="GtkLabel" id="lbl_from_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">label</property>
+                                    <property name="label" translatable="yes">From Account</property>
+                                    <property name="xalign">0.10000000149011612</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1039,7 +1069,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkComboBoxText" id="comboboxtext3">
+                                  <object class="GtkComboBoxText" id="drp_from_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                   </object>
@@ -1050,10 +1080,11 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="label15">
+                                  <object class="GtkLabel" id="lbl_address_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">label</property>
+                                    <property name="label" translatable="yes">To Address</property>
+                                    <property name="xalign">0.10000000149011612</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1073,10 +1104,12 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="label16">
+                                  <object class="GtkLabel" id="lbl_amount_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">label</property>
+                                    <property name="label" translatable="yes">Amount</property>
+                                    <property name="ellipsize">start</property>
+                                    <property name="xalign">0.10000000149011612</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1085,9 +1118,12 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkSpinButton" id="spinbutton3">
+                                  <object class="GtkSpinButton" id="spin_amount_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
+                                    <property name="adjustment">adj_amount_move</property>
+                                    <property name="digits">8</property>
+                                    <property name="numeric">True</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1096,10 +1132,11 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="label17">
+                                  <object class="GtkLabel" id="spin_minconf_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">label</property>
+                                    <property name="label" translatable="yes">Minconf [default=1]</property>
+                                    <property name="xalign">0.10000000149011612</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1108,9 +1145,12 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkSpinButton" id="spinbutton4">
+                                  <object class="GtkSpinButton" id="spin_minconf_sen">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
+                                    <property name="adjustment">adj_minconf_move</property>
+                                    <property name="numeric">True</property>
+                                    <property name="value">1</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1119,10 +1159,11 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="label18">
+                                  <object class="GtkLabel" id="lbl_comment_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">label</property>
+                                    <property name="label" translatable="yes">Comment [optional]</property>
+                                    <property name="xalign">0.10000000149011612</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1142,10 +1183,11 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="label19">
+                                  <object class="GtkLabel" id="lbl_comment_to_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">label</property>
+                                    <property name="label" translatable="yes">Comment-to [optional]</property>
+                                    <property name="xalign">0.10000000149011612</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -1165,11 +1207,14 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkButton" id="button2">
-                                    <property name="label" translatable="yes">button</property>
+                                  <object class="GtkButton" id="btn_sen">
+                                    <property name="label">gtk-ok</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
+                                    <property name="relief">half</property>
+                                    <property name="use_stock">True</property>
+                                    <property name="always_show_image">True</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
