--- a/glade/fujicoin-ui.glade
+++ b/glade/fujicoin-ui.glade
@@ -1137,7 +1137,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkEntry" id="entry3">
+                                  <object class="GtkEntry" id="entry_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                   </object>
@@ -1176,7 +1176,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="spin_minconf_send">
+                                  <object class="GtkLabel" id="lbl_minconf_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="label" translatable="yes">Minconf [default=1]</property>
@@ -1189,7 +1189,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkSpinButton" id="spin_minconf_sen">
+                                  <object class="GtkSpinButton" id="spin_minconf_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="adjustment">adj_minconf_move</property>
@@ -1216,7 +1216,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkEntry" id="entry2">
+                                  <object class="GtkEntry" id="entry_comment_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                   </object>
@@ -1240,7 +1240,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkEntry" id="entry4">
+                                  <object class="GtkEntry" id="entry_comment_to_send">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                   </object>
@@ -1251,7 +1251,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkButton" id="btn_sen">
+                                  <object class="GtkButton" id="btn_send_coin">
                                     <property name="label">gtk-ok</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
@@ -1259,11 +1259,23 @@
                                     <property name="relief">half</property>
                                     <property name="use_stock">True</property>
                                     <property name="always_show_image">True</property>
+                                    <signal name="clicked" handler="on_btn_send_coin_clicked" swapped="no"/>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
                                     <property name="fill">True</property>
                                     <property name="position">13</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="lbl_result_send">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">14</property>
                                   </packing>
                                 </child>
                               </object>
